--- a/codewellex.1/index.html
+++ b/codewellex.1/index.html
@@ -22,26 +22,32 @@
     <summary>
       <h1 id="summary">Summary</h1>
       <div class="skills">
+
         <img src="configure/images/icon-reaction.svg" alt="icon reaction">
-        <p class="space">Reaction</p>
-        <p> 80 / 100</p>
+        <p class="space" id="reaction">Reaction</p><p class="points"> <span class="dark">80 </span>/ 100</p>
+
       </div>
       <div class="skills">
+
         <img src="configure/images/icon-memory.svg" alt="icon memoty">
-        <p class="space">Memory</p>
-        <p>92 / 100</p>
+        <p class="space" id="memory">Memory</p><p class="points"><span class="dark">92 </span> / 100</p>
+
       </div>
       <div class="skills">
+
         <img src="configure/images/icon-verbal.svg" alt="icon verbal">
-        <p class="space">Verbal</p>
-        <p>61 / 100</p>
+        <p class="space" id="verbal">Verbal</p><p class="points"><span class="dark">61 </span>/ 100</p>
+
       </div>
       <div class="skills">
+
         <img src="configure/images/icon-visual.svg" alt="icon visual">
-        <p class="space">Visual</p>
-        <p>72 / 100</p>
+        <p class="space" id="visual">Visual</p><p class="points"><span class="dark">72 </span>/ 100</p>
+
       </div>
-      <button>Continue</button>
+      <div id="conteiner-button">
+        <button id="button">Continue</button>
+      </div>
     </summary>
   </main>
 </body>
